# aoc2024

./: CMakeLists.txt  README.md  generate_day.cmake
src/: DaySolver.h  utils.h
src/cli/: ArgsParser.h  Utils.h
src/problems/: day1.cpp  day1.h  day10.cpp  day10.h  day11.cpp  day11.h  day2.cpp  day2.h  day3.cpp  day3.h  day4.cpp  day4.h  day5.cpp  day5.h  day6.cpp  day6.h  day7.cpp  day7.h  day8.cpp  day8.h  day9.cpp  day9.h
templates/: SolverFactory.h.in  day_template.cpp.in  day_template.h.in
tests/: solution_check.cpp
